--- a/assets/html/hagigat.html
+++ b/assets/html/hagigat.html
@@ -9,13 +9,15 @@
     <!-- FONT AWESOME ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- GOOGLE FONTS  -->
-    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <div class="foricon">
-            <a href=""><i class="fa-solid fa-code"></i></a>
+            <a href=""><i id="codelogo" class="fa-solid fa-code"></i></a>
         </div>
         <div class="navbar">
             <a href="">Skills</a>
@@ -23,9 +25,17 @@
             <a href="">Experiences</a>
             <a href="">Education</a>
             <a href="">Resume</a>
+            <a href="">Contact</a>
         </div>
-        <div class="searchandmodes">
-            
+        <div class="sociallinks">
+            <div class="p"><b>Social Links:</b></div>
+            <div class="links">
+                <a href="">In</a>
+                <a href="">Github</a>
+            </div>
+        </div>
+        <div class="nightmode">
+            <button onclick="myFunction()"><i class="fa-solid fa-circle-half-stroke"></i></button>
         </div>
     </header>
 
