--- a/assets/html/hagigat.html
+++ b/assets/html/hagigat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,16 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/hagigat.css">
     <!-- FONT AWESOME ICONS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- GOOGLE FONTS  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!-- HEADER -->
     <header>
@@ -20,7 +25,7 @@
             <a href=""><i id="codelogo" class="fa-solid fa-code"></i></a>
         </div>
         <div class="navbar">
-            <a href="">Skills</a>
+            <a href="skill.html">Skills</a>
             <a href="">Projects</a>
             <a href="">Experiences</a>
             <a href="">Education</a>
@@ -35,7 +40,8 @@
             </div>
         </div>
         <div class="nightmode">
-            <button onclick="myFunction()"><i class="fa-solid fa-circle-half-stroke"></i></button>
+            <button class="button" onclick="myFunction()"><i id="icon"
+                    class="fa-solid fa-circle-half-stroke"></i></button>
         </div>
     </header>
 
@@ -47,4 +53,5 @@
     <!-- JAVASCRIPT -->
     <script src="../javascript/hagigat.js"></script>
 </body>
+
 </html>
