--- a/assets/html/skill.html
+++ b/assets/html/skill.html
@@ -19,11 +19,11 @@
 
 <body>
     <div class="grid-container">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
+        <div class="grid-item"><i class="fa-brands fa-html5"></i></div>
+        <div class="grid-item"><i class="fa-brands fa-css3-alt"></i></div>
+        <div class="grid-item"><i class="fa-brands fa-sass"></i></div>
+        <div class="grid-item"><i class="fa-brands fa-php"></i></div>
+        <div class="grid-item"><i class="fa-brands fa-js"></i></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
