--- a/assets/html/skill.html
+++ b/assets/html/skill.html
@@ -18,12 +18,39 @@
 </head>
 
 <body>
+    <h1>Skills</h1>
     <div class="grid-container">
         <div class="grid-item"><i class="fa-brands fa-html5"></i></div>
         <div class="grid-item"><i class="fa-brands fa-css3-alt"></i></div>
         <div class="grid-item"><i class="fa-brands fa-sass"></i></div>
         <div class="grid-item"><i class="fa-brands fa-php"></i></div>
         <div class="grid-item"><i class="fa-brands fa-js"></i></div>
+    </div>
+    <div class="skillsbar">
+        <p>HTML</p>
+        <div class="container">
+            <div class="skills html">90%</div>
+        </div>
+
+        <p>CSS</p>
+        <div class="container">
+            <div class="skills css">80%</div>
+        </div>
+
+        <p>SASS</p>
+        <div class="container">
+            <div class="skills sass">80%</div>
+        </div>
+
+        <p>Javascript</p>
+        <div class="container">
+            <div class="skills js">60%</div>
+        </div>
+
+        <p>PHP</p>
+        <div class="container">
+            <div class="skills php">60%</div>
+        </div>
     </div>
 
     <script src="../javascript/skills.js"></script>
