--- a/assets/html/hagigat.html
+++ b/assets/html/hagigat.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hagigat Aghazada | Full Stack Developer</title>
+    <link rel="icon" type="icon" href="../image/personcode.png">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/hagigat.css">
     <!-- ICONS -->
